Modify tooltip info in index.html

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       </div>
       <div class="balance">
         <p class="info">You've used <span>815 GB</span> of your storage</p>
-        <p class="tooltip">185 GB LEFT</p>
+        <p class="tooltip"><span>185</span><span> GB LEFT</span></p>
         <div class="range">
           <div class="used"></div>
         </div>
